# fossodoro

./: .gitignore  CMakeLists.txt  fossodoro.c  fossodoro.pot  osd.c  osd.h  pt_BR.po  readme.md  sound.c  sound.h
locale/pt_BR/LC_MESSAGES/: fossodoro.mo
translations/: fossodoro.pot  pt_BR.po
